--- a/TKPniaWebsite/package.json
+++ b/TKPniaWebsite/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^22.14.1",
     "axios": "^1.8.4",
     "level": "^10.0.0",
+    "marked": "^15.0.9",
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.2.0",
-    "pixi.js": "^8.9.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
