--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         }
     ],
     "compilerOptions": {
-        "module": "ESNext",
+        "module": "NodeNext",
         "moduleResolution": "NodeNext",
         "target": "ESNext",
         "lib": ["ESNext", "DOM"],
